# personality

./: .env.example  .gitignore  API.md  ASYNC_ARCHITECTURE.md  CLAUDE.md  ENV_SETUP_COMPLETE.md  FASTAPI_GUIDE.md  GLM_EMBEDDING_GUIDE.md  MEMORY_CHAT_GUIDE.md  PROJECT_STRUCTURE.md  QUICKSTART_EMBEDDING.md  README.md  ROLE_SYSTEM_GUIDE.md  SECURITY.md  STREAMLIT_GUIDE.md  TEST_RESULTS.md  USER_GUIDE_CN.md  WEB_README.md  app.py  demo_companion_memory.py  demo_interactive_chat.py  pyproject.toml  requirements.txt  run_streamlit.sh  start.sh  start_web.sh  streamlit_app.py  test_all_roles.py  test_api.py  test_env_loading.py  test_memory_system.py  test_real_conversations.py  test_real_scenario.py  test_role_system.py  test_speaker_feature.py
.claude/: settings.local.json
config/roles/: companion_warm.json  entj_commander.json  entp_debater.json  estj_manager.json  infp_mediator.json  intj_prometheus.json
demos/: README.md  demo_glm_embedding.py
examples/: sample_conversation.txt
src/: __init__.py
src/api/: __init__.py  dependencies.py  models.py  routes.py
src/conversation/: __init__.py  conversation_manager.py
src/extractors/: __init__.py  base.py  entity_extractor.py  sentiment_analyzer.py  topic_extractor.py
src/models/: __init__.py  memory_fragment.py  personality.py  user.py
src/pipeline/: __init__.py  memory_pipeline.py
test_results/: README.md  TESTING_SUMMARY.md  real_conversation_test_results.json  test_report.txt
tests/: test_memory_system.py  test_models.py  test_pipeline.py  test_real_conversation_full.py  test_scorers.py
(+14 files in other folders)
